basically working for a single question.  user can only vote once.  poll expires.  some datetime error to resolve.

--- a/peerinst/templates/peerinst/blink.html
+++ b/peerinst/templates/peerinst/blink.html
@@ -12,10 +12,8 @@
   {{ form.errors }}
   {{ form }}
   <div>
-    <input type="submit" value="{% block submit_button %}{% trans 'Next' %}{% endblock %}" />
+    <input type="submit" value="{% block submit_button %}{% trans 'Submit' %}{% endblock %}" />
   </div>
 </form>
-
-{{object.blinkanswer_set.count}}
 
 {% endblock %}
