--- a/peerinst/templates/peerinst/teacher_detail.html
+++ b/peerinst/templates/peerinst/teacher_detail.html
@@ -48,4 +48,24 @@
   </ol>
 </div>
 
+<div>
+  <h2>Blink Questions</h2>
+  <div class="admin-link" style="margin-bottom:0pt;"><a href="{% url 'teacher-blinks' teacher.id %}">Select/add a new blink question</a></div>
+  {% if not object.blinks.all %}
+  You do not have any blink questions.
+  {% endif %}
+  <ol>
+  {% for a in object.blinks.all %}
+    <li> <a href="{% url 'blink-summary' a.key %}">Access Code: {{a.key}}</a> - Prompt: {{a|safe|striptags}}
+    {% if object.image %}
+    <div class="question-text" id="question-image">
+      <img src="{{ object.image.url }}"
+           width=200 alt="object.image_alt_text">
+    </div>
+    {% endif %}
+    </li>
+  {% endfor %}
+  </ol>
+</div>
+
 {% endblock %}
