--- a/peerinst/templates/peerinst/blink.html
+++ b/peerinst/templates/peerinst/blink.html
@@ -7,6 +7,12 @@
 
 <h2>{{object.question.title}}</h2>
 <p>{{object.question.text|safe}}</p>
+{% if object.question.image %}
+<div>
+  <img style="display:block;margin:auto;padding:10pt;" src="{{ object.question.image.url }}"
+       width=200 alt="object.image_alt_text">
+</div>
+{% endif %}
 <form method="post">
   {% csrf_token %}
   {{ form.field_errors }}
