--- a/peerinst/templates/peerinst/blinkquestion_detail.html
+++ b/peerinst/templates/peerinst/blinkquestion_detail.html
@@ -14,8 +14,8 @@
 <h2>{{object.question.title}}</h2>
 <p>{{object.question.text|safe}}</p>
     {% if object.question.image %}
-    <div class="question-text" id="question-image">
-      <img src="{{ object.question.image.url }}"
+    <div>
+      <img <img style="display:block;margin:auto;padding:10pt;" src="{{ object.question.image.url }}"
            width=200 alt="object.image_alt_text">
     </div>
     {% endif %}
