--- a/peerinst/templates/peerinst/blinkquestion_detail.html
+++ b/peerinst/templates/peerinst/blinkquestion_detail.html
@@ -9,6 +9,7 @@
 // MIT licensed
 </script>
 
+
 <h1>Blink question</h1>
 
 <h2>{{object.question.title}}</h2>
@@ -25,11 +26,10 @@
 {% for label, choice in object.question.get_choices %}
   <li>
     {% if not request.user.is_authenticated and label = latest_answer_choice %}
-      <span style="font-weight:bold;">{{label}}.</span>
+      <span style="font-weight:bold;">{{label}}. {{choice|safe}}</span>
     {% else %}
-      {{label}}.
+      {{label}}. {{choice|safe}}
     {% endif %}
-    {{choice|safe}}
   </li>
 {% endfor %}
 </ul>
@@ -147,7 +147,6 @@ function getResponse(response) {
 }
 
 function getResults(response) {
-  // Get and show results
   get("{% url 'blink-results' pk=object.pk %}",showResults);
   return;
 }
@@ -164,9 +163,24 @@ function update_time(){
       d3.select("#timer-bg").style('fill','red');
       d3.select("#reset_button").style('display','inline');
       d3.select("#next_button").style('display','inline');
-      // Close the question.  Be careful here... it is a wasted use of POST for non-authenticated users.
-      // Also, if student browser is just slightly ahead of teacher, getResults will get results from prior round!
-      changeQuestionState("{% url 'blink-close' pk=object.pk %}",false,getResults);
+      // Close the question if authenticated, otherwise get results
+      if ({{request.user.is_authenticated|lower}}){
+        changeQuestionState("{% url 'blink-close' pk=object.pk %}",false,getResults);
+      }
+      else {
+        function processStatus(response) {
+          if (response['status'] == false) {
+            clearInterval(checkID);
+            getResults();
+          }
+        }
+        function blinkStatus() {
+          console.info("Checking status of poll");
+          get("{% url 'blink-status' pk=object.pk %}",processStatus);
+        }
+        // Check round closed
+        var checkID = window.setInterval(blinkStatus,1000);
+      }
       return 0;
     }
   });
@@ -209,6 +223,19 @@ function showResults(data){
   .attr("y",function(d){return y(0);})
   .attr("width",x.bandwidth())
   .attr("height",0)
+  .attr("opacity",function(d){
+    if ({{request.user.is_authenticated|lower}}) {
+      return 1;
+    }
+    else {
+      if (d.key == "{{latest_answer_choice}}") {
+        return 1;
+      }
+      else {
+        return 0.8;
+      }
+    }
+  })  
   .transition()
   .duration(1000)
   .attr("y",function(d){return y(d.value);})
