--- a/peerinst/static/peerinst/css/main.css
+++ b/peerinst/static/peerinst/css/main.css
@@ -252,8 +252,9 @@ a {
     -webkit-padding-start: 20px;
   }
   img {
-    width: 100%;
+    max-width: 100%;
     max-height: 200px;
     width: auto;
+    height: auto;
   }
 }
