add idea of currency to blinkquestion and revise listview

--- a/peerinst/templates/peerinst/blinkquestion_detail.html
+++ b/peerinst/templates/peerinst/blinkquestion_detail.html
@@ -16,7 +16,9 @@
 <p>{{object.question.text|safe}}</p>
     {% if object.question.image %}
     <div>
-      <img style="display:block;margin:auto;" src="{{ object.question.image.url }}" alt="object.image_alt_text">
+      <img style="display:block;margin:auto;
+      padding-top:10pt;
+      padding-bottom:10pt;" src="{{ object.question.image.url }}" alt="object.image_alt_text">
     </div>
     {% endif %}
 <div>
