--- a/peerinst/templates/peerinst/teacher_blinks.html
+++ b/peerinst/templates/peerinst/teacher_blinks.html
@@ -15,44 +15,24 @@
 
 <h1>My Blink Questions</h1>
 <div class="admin-link" style="margin-bottom:0pt;"><a href="{% url 'teacher' teacher.id %}">Back to My Account</a></div>
-<h2>Current</h2>
+<h2>Your current blinks</h2>
 {% if not teacher.blinks.all %}
 You do not have any blink questions.  You can select and modify an existing blink question from the list below or create a new one.
 {% endif %}
 <ol>
 {% for g in teacher.blinks.all %}
+ {% if g.current %}
   <li>
-    <form action="{% url 'modify-teacher-blinks' teacher.id %}" method="post">
+    <form action="{% url 'blink-set-current' g.pk %}" method="post">
         {% csrf_token %}
-        <input type="hidden" id="id_blink" name="blink" value="{{g.pk}}"></input>
         {{g|safe|striptags}}  <input type="submit" value="clear" />
     </form>
-    <a href="{% url 'blink-summary' g.key %}"> START -> {{g.key}}</a>
     {% if g.question.image %}
-    <div class="question-text" id="question-image">
-      <img src="{{ g.question.image.url }}"
-           width=200 alt="object.question.image_alt_text">
-    </div>
-    {% endif %}
-  </li>
-{% endfor %}
-</ol>
-
-
-<h2>All</h2>
-<ol>
-{% for g in object_list.all %}
-  {% if g not in teacher.blinks.all %}
-  <li>
-    <form action="{% url 'modify-teacher-blinks' teacher.id %}" method="post">
-        {% csrf_token %}
-        <input type="hidden" id="id_blinks" name="blink" value="{{g.pk}}"></input>
-        {{g|safe|striptags}}<input type="submit" value="add" />
-    </form>
-    {% if g.question.image %}
-    <div class="question-text" id="question-image">
-      <img src="{{ g.question.image.url }}"
-           width=200 alt="object.question.image_alt_text">
+    <div>
+      <img style="display:block;margin:auto;
+      padding-top:10pt;
+      padding-bottom:10pt;"  src="{{ g.question.image.url }}"
+           alt="object.question.image_alt_text">
     </div>
     {% endif %}
   </li>
@@ -60,4 +40,45 @@ You do not have any blink questions.  You can select and modify an existing blin
 {% endfor %}
 </ol>
 
+
+<h2>All your blinks</h2>
+<ol>
+{% for g in teacher.blinks.all %}
+  {% if not g.current %}
+  <li>
+    <form action="{% url 'blink-set-current' g.pk %}" method="post">
+        {% csrf_token %}
+        {{g|safe|striptags}}  <input type="submit" value="add" />
+    </form>
+    {% if g.question.image %}
+    <div>
+      <img style="display:block;margin:auto;
+      padding-top:10pt;
+      padding-bottom:10pt;" src="{{ g.question.image.url }}"
+           alt="object.question.image_alt_text">
+    </div>
+    {% endif %}
+  </li>
+  {% endif %}
+{% endfor %}
+</ol>
+
+
+<h2>All questions in discipline</h2>
+<ol>
+{% for g in suggested_questions %}
+  <li>{{g.text|safe|striptags}}
+    {% if g.image %}
+    <div>
+      <img style="display:block;margin:auto;
+      padding-top:10pt;
+      padding-bottom:10pt;" src="{{ g.image.url }}"
+           alt="g.image_alt_text">
+    </div>
+    {% endif %}
+
+  </li>
+
+{% endfor %}
+</ol>
 {% endblock %}
