--- a/peerinst/templates/registration/login.html
+++ b/peerinst/templates/registration/login.html
@@ -2,36 +2,40 @@
 
 {% block body %}
 
-{% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
-{% endif %}
 
-{% if next %}
-    {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-    {% else %}
-    <p>Please login to see this page.</p>
-    {% endif %}
-{% endif %}
 
 <form method="post" action="{% url 'login' %}">
 {% csrf_token %}
 
 <div>
-  <td>{{ form.username.label_tag }}</td>
-  <td>{{ form.username }}</td>
+  {{ form.username.label_tag }}<br>
+  {{ form.username }}
 </div>
 <div>
-  <td>{{ form.password.label_tag }}</td>
-  <td>{{ form.password }}</td>
+  {{ form.password.label_tag }}<br>
+  {{ form.password }}
 </div>
-
 <div>
   <input type="submit" value="Login" />
   <input type="hidden" name="next" value="{{ next }}" />
 </div>
+
 </form>
+
+{% if form.errors %}
+  <p>Your username and password didn't match. Please try again.</p>
+{% endif %}
+
+{% if next %}
+  {% if user.is_authenticated %}
+    <p>Your account doesn't have access to this page. To proceed,
+  please login with an account that has access.</p>
+  {% else %}
+    <p>Please login to see this page.</p>
+  {% endif %}
+{% endif %}
+
+<svg>
 
 
 {% endblock %}
