with correct font

--- a/peerinst/templates/registration/welcome.html
+++ b/peerinst/templates/registration/welcome.html
@@ -195,7 +195,7 @@ g.append("text")
 .attr("y",y(0))
 .attr("fill","white")
 .attr("text-anchor","middle")
-.style("font-family","Cardo serif")
+.style("font-family","Cardo, serif")
 .style("font-style",'italic')
 .style("font-size","40pt")
 .text("my");
