working on ranking page.

--- a/peerinst/templates/peerinst/teacher_detail.html
+++ b/peerinst/templates/peerinst/teacher_detail.html
@@ -66,4 +66,23 @@
   </ol>
 </div>
 
+
+<div>
+  <h2>Blink Scripts</h2>
+  <div class="admin-link" style="margin-bottom:0pt;"><a href="{% url 'blinkAssignment-create' %}">Create a new blink script</a></div>
+  {% if not object.blinkassignments.all %}
+  A blink script is a series of blink questions strung together into one activity.  You do not have any blink scripts.
+  {% endif %}
+  <ol>
+  {% for a in object.blinkassignments.all %}
+    <li style="margin-bottom:10px;"> {{a.title|safe|striptags}}
+      <span class="admin-link" ><a href="{% url 'blinkAssignment-update' a.pk %}">Edit</a></span>
+      <br>
+    Script url: <span style="font-weight:bold;">{% url 'blink-question' a.key %}</span><br>
+    <!-- pass extra context for script -->
+    <a href="{% url 'blink-summary' a.key %}"><input type="button" value="START"></a>
+    </li>
+  {% endfor %}
+  </ol>
+</div>
 {% endblock %}
