with back button

--- a/peerinst/templates/peerinst/blinkassignment_detail.html
+++ b/peerinst/templates/peerinst/blinkassignment_detail.html
@@ -19,6 +19,7 @@
 
 
 <h1>Update blink script</h1>
+<div class="admin-link" style="margin-bottom:0pt;"><a href="{% url 'teacher' teacher.id %}">Back to My Account</a></div>
 <h2>{{object.title}}</h2>
 <ol>
 {% for a in object.blinkassignmentquestion_set.all %}
